# poetry_pypi_template

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
hapy_pypi/: __init__.py
tests/: conftest.py  pytest.ini  test_00_utils.py
