[tool.poetry]
name = "hapy_pypi"
version = "0.1.1"
description = "A poetry template for release to pypi"
authors = ["Abhijeet Parida <abhijeet.parida@tum.de>"]
license = "MIT"
repository = 'https://github.com/a-parida12/poetry_pypi_template'
readme = 'README.md'
keywords = ["python", "packaging", "pypi", "poetry", "pip", "github-actions"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
commitizen = "^2.20.3"
bandit = "^1.7.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"